<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/v_16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_close"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_baseline_close_24" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Apakah ramadhan sebelumnya berpuasa ?" />

            <RadioGroup
                android:id="@+id/rg_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/v_16dp"
                android:layout_marginRight="@dimen/v_16dp"
                android:layout_marginBottom="@dimen/v_16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Ya"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="Tidak"
                    android:textSize="18sp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/ln_long_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Berapa hari anda berpuasa di ramadhan tahun yang lalu ?" />

                <EditText
                    android:id="@+id/edt_long_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/v_16dp"
                    android:hint="Ketik disini"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ln_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alasan_tidak_berpuasa" />

                <CheckBox
                    android:id="@+id/cb_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hiperglikemi" />

                <CheckBox
                    android:id="@+id/cb_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hipoglikemi" />

                <CheckBox
                    android:id="@+id/cb_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sakit_dirawat_di_rumah_sakit" />

                <CheckBox
                    android:id="@+id/cb_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/takut_kawatir" />

                <CheckBox
                    android:id="@+id/cb_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tidak_kuat" />

                <CheckBox
                    android:id="@+id/cb_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/punya_komplikasi" />

                <CheckBox
                    android:id="@+id/cb_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/anjuran_petugas_kesehatan" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/v_30dp"
                android:background="@drawable/btn_curve_pres"
                android:clickable="true"
                android:text="Simpan"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>